--- a/YumMe/YumMe/Base.lproj/Main.storyboard
+++ b/YumMe/YumMe/Base.lproj/Main.storyboard
@@ -31,45 +31,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello, User!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r06-la-c8f">
-                                <rect key="frame" x="34" y="97" width="173" height="33"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Hello, User!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r06-la-c8f">
+                                <rect key="frame" x="34" y="97" width="132.5" height="33"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nfs-na-KBf">
-                                <rect key="frame" x="228" y="59" width="146" height="109"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nfs-na-KBf">
+                                <rect key="frame" x="187.5" y="59" width="186.5" height="117.5"/>
                             </imageView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sw3-JC-Mfn">
-                                <rect key="frame" x="34" y="267" width="340" height="156"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sw3-JC-Mfn">
+                                <rect key="frame" x="34" y="261" width="340" height="156"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZLv-c4-QlC">
-                                        <rect key="frame" x="185" y="13" width="137" height="135"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Breakfast" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="koV-OT-XEd">
-                                        <rect key="frame" x="15" y="18" width="85" height="23"/>
+                                        <rect key="frame" x="14" y="22" width="85" height="23"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Recipe name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfU-ff-WDT">
-                                        <rect key="frame" x="15" y="49" width="162" height="39"/>
+                                        <rect key="frame" x="14" y="59" width="162" height="39"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZLv-c4-QlC">
+                                        <rect key="frame" x="184" y="11" width="137" height="135"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PWi-hg-wRK">
+                                        <rect key="frame" x="0.0" y="0.0" width="340" height="156"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="156" id="Alt-wh-l4u"/>
+                                    <constraint firstAttribute="width" constant="340" id="sPI-ix-07G"/>
+                                </constraints>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xro-fd-bDf">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xro-fd-bDf">
                                 <rect key="frame" x="34" y="441" width="340" height="156"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UQF-OK-fZz">
                                         <rect key="frame" x="185" y="13" width="137" height="135"/>
@@ -89,12 +93,19 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wtk-cW-Rmn">
+                                        <rect key="frame" x="0.0" y="0.0" width="340" height="156"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="340" id="3C7-EY-5hC"/>
+                                    <constraint firstAttribute="height" constant="156" id="ko9-Tn-PDK"/>
+                                </constraints>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O81-ev-snX">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O81-ev-snX">
                                 <rect key="frame" x="34" y="621" width="340" height="156"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ynw-cV-OPn">
                                         <rect key="frame" x="185" y="13" width="137" height="135"/>
@@ -114,12 +125,19 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w3q-uO-D6Q">
+                                        <rect key="frame" x="0.0" y="0.0" width="340" height="156"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="340" id="A6l-KN-7Jg"/>
+                                    <constraint firstAttribute="height" constant="156" id="oYG-7d-IgT"/>
+                                </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Here are your recommended meals for today" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ums-uP-Xgs">
-                                <rect key="frame" x="34" y="186" width="340" height="54"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Here are your recommended meals for today" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ums-uP-Xgs">
+                                <rect key="frame" x="34" y="203.5" width="340" height="45.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -127,25 +145,61 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8mB-zK-bTL"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ums-uP-Xgs" firstAttribute="leading" secondItem="8mB-zK-bTL" secondAttribute="leading" constant="34" id="1G8-WZ-oQ7"/>
+                            <constraint firstItem="Xro-fd-bDf" firstAttribute="leading" secondItem="sw3-JC-Mfn" secondAttribute="leading" id="5v4-tj-YxG"/>
+                            <constraint firstItem="O81-ev-snX" firstAttribute="top" secondItem="Xro-fd-bDf" secondAttribute="bottom" constant="24" id="8Ad-lV-4V3"/>
+                            <constraint firstItem="Nfs-na-KBf" firstAttribute="leading" secondItem="r06-la-c8f" secondAttribute="trailing" constant="21" id="8rM-Og-7sg"/>
+                            <constraint firstItem="Ums-uP-Xgs" firstAttribute="top" secondItem="r06-la-c8f" secondAttribute="bottom" constant="73.5" id="91i-Ht-KIG"/>
+                            <constraint firstItem="O81-ev-snX" firstAttribute="top" secondItem="Xro-fd-bDf" secondAttribute="bottom" constant="24" id="Hre-4E-Vjh"/>
+                            <constraint firstItem="Xro-fd-bDf" firstAttribute="leading" secondItem="O81-ev-snX" secondAttribute="leading" id="HtQ-y2-RF0"/>
+                            <constraint firstItem="8mB-zK-bTL" firstAttribute="bottom" secondItem="O81-ev-snX" secondAttribute="bottom" constant="36" id="JAk-8L-di0"/>
+                            <constraint firstItem="Xro-fd-bDf" firstAttribute="top" secondItem="sw3-JC-Mfn" secondAttribute="bottom" constant="24" id="Lce-qp-ust"/>
+                            <constraint firstItem="sw3-JC-Mfn" firstAttribute="top" secondItem="Ums-uP-Xgs" secondAttribute="bottom" constant="12" id="MS7-DN-K18"/>
+                            <constraint firstItem="Xro-fd-bDf" firstAttribute="top" secondItem="sw3-JC-Mfn" secondAttribute="bottom" constant="24" id="NjM-WF-oB5"/>
+                            <constraint firstItem="r06-la-c8f" firstAttribute="leading" secondItem="8mB-zK-bTL" secondAttribute="leading" constant="34" id="OIh-wr-5Wp"/>
+                            <constraint firstItem="Nfs-na-KBf" firstAttribute="top" secondItem="8mB-zK-bTL" secondAttribute="top" constant="15" id="Sup-q8-J1i"/>
+                            <constraint firstItem="r06-la-c8f" firstAttribute="top" secondItem="8mB-zK-bTL" secondAttribute="top" constant="53" id="VDN-xs-vrs"/>
+                            <constraint firstItem="O81-ev-snX" firstAttribute="leading" secondItem="8mB-zK-bTL" secondAttribute="leading" constant="34" id="Vvk-8F-uEh"/>
+                            <constraint firstItem="O81-ev-snX" firstAttribute="top" secondItem="Xro-fd-bDf" secondAttribute="bottom" constant="24" id="c9Q-6u-VR5"/>
+                            <constraint firstItem="Ums-uP-Xgs" firstAttribute="top" secondItem="Nfs-na-KBf" secondAttribute="bottom" constant="27" id="dwL-6f-32f"/>
+                            <constraint firstItem="8mB-zK-bTL" firstAttribute="trailing" secondItem="Ums-uP-Xgs" secondAttribute="trailing" constant="40" id="p3m-rc-Rps"/>
+                            <constraint firstItem="8mB-zK-bTL" firstAttribute="bottom" secondItem="O81-ev-snX" secondAttribute="bottom" constant="36" id="sLn-Wu-kiM"/>
+                            <constraint firstItem="8mB-zK-bTL" firstAttribute="trailing" secondItem="Nfs-na-KBf" secondAttribute="trailing" constant="40" id="uri-rj-B8Q"/>
+                            <constraint firstItem="8mB-zK-bTL" firstAttribute="trailing" secondItem="O81-ev-snX" secondAttribute="trailing" constant="40" id="zJf-y6-8y2"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" id="UlM-F4-6Bu"/>
                     <connections>
                         <outlet property="breakfastPicture" destination="ZLv-c4-QlC" id="71K-uk-A5x"/>
                         <outlet property="breakfastRecipeName" destination="dfU-ff-WDT" id="nXX-IB-ymZ"/>
                         <outlet property="breakfastView" destination="sw3-JC-Mfn" id="mO3-Oy-MJI"/>
+                        <outlet property="breakfastViewButton" destination="PWi-hg-wRK" id="ngV-73-IzS"/>
                         <outlet property="dinnerPicture" destination="Ynw-cV-OPn" id="NUh-SO-cZN"/>
                         <outlet property="dinnerRecipeName" destination="FjL-t8-vlR" id="7zl-lC-9eQ"/>
                         <outlet property="dinnerView" destination="O81-ev-snX" id="o5O-6X-KmL"/>
+                        <outlet property="dinnerViewButton" destination="w3q-uO-D6Q" id="Lr7-kt-pav"/>
                         <outlet property="greetingLabel" destination="r06-la-c8f" id="qEX-wC-Odt"/>
                         <outlet property="lunchPicture" destination="UQF-OK-fZz" id="whY-gn-Zjl"/>
                         <outlet property="lunchRecipeName" destination="eM2-Jk-Xw8" id="p5J-vx-lIN"/>
                         <outlet property="lunchView" destination="Xro-fd-bDf" id="auU-qU-OpP"/>
+                        <outlet property="lunchViewButton" destination="wtk-cW-Rmn" id="59u-58-ORR"/>
                         <outlet property="profilePicture" destination="Nfs-na-KBf" id="WTe-kW-Fw9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Ye-Qx-ETQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1782.608695652174" y="-131.25"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="y4L-X2-LF4">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DyP-tf-A1G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController id="TGA-VV-IJM" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="6KW-md-tSp"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="2975" y="-122"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="bdW-mN-OW3">
